@@ -16,6 +16,7 @@
 #include <sys/time.h>
 #include <sys/resource.h>
 #include "fdfs_define.h"
+#include "ini_file_reader.h"
 
 #ifdef __cplusplus
 extern "C" {
@@ -68,6 +69,7 @@ bool isDir(const char *filename);
 bool isFile(const char *filename);
 bool is_filename_secure(const char *filename, const int len);
 int fdfs_check_data_filename(const char *filename, const int len);
+void fdfs_load_log_level(IniItemInfo *items, const int nItemCount);
 
 void chopPath(char *filePath);
 int getFileContent(const char *filename, char **buff, int *file_size);
