@@ -23,3 +23,14 @@ store_group=group2
 ### no unit for byte(B)
 reserved_storage_space = 4GB
 
+#standard log level as syslog, case insensitive, value list:
+### emerg for emergency
+### alert
+### crit for critical
+### error
+### warn for warning
+### notice
+### info
+### debug
+log_level=info
+
