@@ -2,6 +2,10 @@
 Version 1.7  2008-08-25
   * opt: change fopen to syscall open
   * Makefile add compile flag -D_FILE_OFFSET_BITS=64 to support large files
+  * log function enhancement: 
+     # support log level
+     # parameter "log_level" added to server config file
+     # keep the log file opened
 
 Version 1.6  2008-08-24
   * add restart daemon shell script: restart.sh
